Fix broken layout

--- a/src/style/pg-ng-dropdown.scss
+++ b/src/style/pg-ng-dropdown.scss
@@ -35,6 +35,12 @@ $dropdownEasing: cubic-bezier(0.230, 1.000, 0.320, 1.000);
 
 }
 
+[image-options=true]{
+
+	width: 250px !important;
+
+}
+
 .pg-dropdown{
 
 	position: relative;
